--- a/appteste/templates/appteste/Gastos/listaGastos.html
+++ b/appteste/templates/appteste/Gastos/listaGastos.html
@@ -5,52 +5,41 @@
 {% load static %}
 
 <link href="{% static 'css/listas.css' %}" rel="stylesheet">
+<link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <body>
 
     <div class="container mt-5">
         <div style="display: flex; justify-content: space-between;">
             <h2>Lista de Gastos</h2>
-            
-            <button class="btn btn-success" onclick="exportTableToCSV('tabela', 'dados.csv')">Exportar para .csv</button>
+
+            <button class="btn btn-success" onclick="exportTableToCSV('tabela', 'dados.csv')">Exportar para
+                .csv</button>
         </div>
         <br>
-        <!-- Filtros -->
-        <form method="POST" class="mb-4">
+        <form method="POST" class="mb-4" action="{% url 'listaGastos' %}">
             {% csrf_token %}
-            <div class="row">
-                <!-- Filtro de Categoria -->
-                <div class="col-md-3">
-                    <select class="form-control" name="categoria">
-                        <option value="">Selecione uma Categoria</option>
-                        {% for c in categorias %}
-                        <option value="{{ c.id }}">{{ c.Descricao }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
+            <div class="input-group mb-3">
+                <select class="form-control" name="categoria">
+                    <option value="">Selecione uma Categoria</option>
+                    {% for c in categorias %}
+                    <option value="{{ c.id }}">{{ c.Descricao }}</option>
+                    {% endfor %}
+                </select>
+                <input type="date" name="data1" class="form-control">
+                <input type="date" name="data2" class="form-control">
+                <select class="form-control" name="empreendimento">
+                    <option value="">Selecione um Empreendimento</option>
+                    {% for e in emp %}
+                    <option value="{{ e.id }}">{{ e.Nome }}</option>
+                    {% endfor %}
+                </select>
 
-                <!-- Filtro de Data -->
-                <div class="col-md-3">
-                    <input type="date" name="data1" class="form-control">
-                </div>
+                <button type="submit" class="btn btn-outline-secondary"><i class="bi bi-search"></i></button>
 
-                <!-- Filtro de Valor -->
-                <div class="col-md-3">
-                    <input type="date" name="data2" class="form-control">
-                </div>
-
-                <!-- Filtro de Empreendimento -->
-                <div class="col-md-3">
-                    <select class="form-control" name="empreendimento">
-                        <option value="">Selecione um Empreendimento</option>
-                        {% for e in emp %}
-                        <option value="{{ e.id }}">{{ e.Nome }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
             </div>
-
-            <button type="submit" class="btn btn-primary mt-3"><a href="{% url 'listaGastos' %}"></a>Filtrar</button>
         </form>
 
         <br>
@@ -97,13 +86,13 @@
         function exportTableToCSV(tableId, filename = 'table.csv') {
             const table = document.getElementById(tableId);
             const rows = Array.from(table.querySelectorAll('tr'));
-            
+
             // Adiciona BOM para que o arquivo seja reconhecido como UTF-8
             let csvContent = '\uFEFF';
 
             rows.forEach(row => {
                 const cols = Array.from(row.querySelectorAll('th, td'));
-                const rowContent = cols.map(col => 
+                const rowContent = cols.map(col =>
                     `"${col.textContent.trim().replace(/"/g, '""').replace(/\n/g, '').replace(/\r/g, '')}"`
                 ).join(',');
                 csvContent += rowContent + '\n';
@@ -111,7 +100,7 @@
 
             const csvBlob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
             const url = URL.createObjectURL(csvBlob);
-            
+
             const a = document.createElement('a');
             a.href = url;
             a.download = filename;
